--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "display_name": "Character's' inner thoughts",
+    "display_name": "Characters inner thoughts",
     "loading_order": 9,
     "requires": [],
     "optional": [],
     "js": "index.js",
     "css": "style.css",
     "author": "JasonLWalker",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "homePage": "yourUrlHere"
 }
